@@ -16,7 +16,8 @@
 				<td class="checkbox">
 					<input type="checkbox" id="asset-{$asset.id}-checkbox" value="{$asset.id}" />
 				</td>
-				<td class="mimetype mimeIcon mime{strtoupper $asset.file_ext}">
+				<td class="mimetype mime{strtoupper $asset.file_ext}">
+					<span class="icon"></span>
 				</td>
 				<td class="filename">
 					<a href="javascript:void(0)" title="{Label assets.ext.alt.download}">
